fix: outline color for collapse btn

--- a/frappe/public/js/frappe/ui/toolbar/components/sidebar.scss
+++ b/frappe/public/js/frappe/ui/toolbar/components/sidebar.scss
@@ -206,6 +206,7 @@ $dropDownBg: #e3e3e3;
 	& .collapse-btn {
 		color: $itemColor;
 		background-color: $darkenBg;
+		outline-color: $darkenBg;
 	}
 }
 
